--- a/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
+++ b/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
@@ -6,23 +6,7 @@
    "id": "1e233234",
    "metadata": {},
    "source": [
-    "## Student Performance Indicator\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "62e05101",
-   "metadata": {},
-   "source": [
-    "#### Life cycle of Machine learning Project\n",
-    "\n",
-    "- Understanding the Problem Statement\n",
-    "- Data Collection\n",
-    "- Data Checks to perform\n",
-    "- Exploratory data analysis\n",
-    "- Data Pre-Processing\n",
-    "- Model Training\n",
-    "- Choose best model"
+    "## SPI - Student Performance Indicator\n"
    ]
   },
   {
